--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,3 +25,10 @@ en:
     previous_label: "&lsaquo; Previous"
     next_label: "Next &rsaquo;"
     page_gap: "&hellip;"
+  views:
+    pagination:
+      first: "&laquo; First"
+      last: "Last &raquo"
+      previous: "&lsaquo; Previous"
+      next: "Next &rsaquo;"
+      truncate: "&hellip;"
